refactored video dialogs and fix minor layout issues

--- a/src/skins/style/ui-components/_thumb-extractor.scss
+++ b/src/skins/style/ui-components/_thumb-extractor.scss
@@ -17,13 +17,13 @@
   #thumbExtractor-preview {
       width: 40%;
       min-width: 400px;
-      height: 100%;
       padding-left: 30px;
       padding-right: 30px;
       float: left;
       box-sizing: border-box;
-      margin-top: 60px;
-      margin-bottom: 60px;
+      margin-top: 50px;
+      margin-bottom: 20px;
+      border-right: 1px solid #636363;
   }
   #thumbExtractor-screenshot {
       width: 59%;
@@ -53,7 +53,7 @@
       right: 0;
       top: 30px;
       text-align: center;
-      font-family: Roboto;
+      font-family: Roboto, sans-serif;
       font-size: 13px;
       font-weight: 500;
       font-style: normal;
@@ -72,7 +72,7 @@
   #frame {
      overflow: auto;
      height: 211px;
-     margin-top: 60px;
+     margin-top: 50px;
   }
   .frame_canva {
     border: 1px solid $darkerBorderColor;
@@ -121,7 +121,7 @@
       background: transparent;
       border: 1px solid #fff;
       color: #fff;
-      font-family: Roboto;
+      font-family: Roboto, sans-serif;
       font-size: 12px;
       font-weight: 500;
       font-style: normal;
@@ -193,7 +193,7 @@
       height: 50px;
       width: 320px;
       text-align: center;
-      margin: 26px auto 40px;
+      margin: 20px auto 20px;
       background-image: url("/assets/common/images/icons/icon-photography.png");
       background-position: center;
       background-repeat: no-repeat;
@@ -218,7 +218,7 @@
       .dl-horizontal dt {
           width: 100%;
           padding-bottom: 0;
-          font-family: Roboto;
+          font-family: Roboto, sans-serif;
           font-size: 12px;
           font-weight: 500;
           font-style: normal;
@@ -227,7 +227,7 @@
       .dl-horizontal dd {
           margin: 0;
           padding-top: 0;
-          font-family: Roboto;
+          font-family: Roboto, sans-serif;
           font-size: 12px;
           font-weight: 500;
           font-style: normal;
@@ -293,17 +293,18 @@
 }
 
 .horizontal-divider {
+    display: none;
     width: 1%;
     max-width: 1px;
     height: 100%;
     background-color: #636363;
     float: left;
-    margin-top: 60px;
+    margin-top: 50px;
 }
 
 #thumb_confirm {
   span {
-      font-family: Roboto;
+      font-family: Roboto, sans-serif;
       font-size: 12px;
       font-weight: 500;
       color: #ffffff;
